--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "ganache-cli": "^6.3.0",
     "http-errors": "~1.6.2",
     "keythereum": "^1.0.4",
+    "lodash": "^4.17.11",
     "morgan": "~1.9.0",
     "solc": "^0.5.3",
     "web3": "^0.20.7",
