--- a/db/app/config.json
+++ b/db/app/config.json
@@ -4,5 +4,6 @@
   "rpc_addr": "127.0.0.1",
   "rpc_port": 10000,
   "data_dir": ".\\data\\",
+  "genesis": ".\\genesis.json",
   "target_gas_limit": 1000000001
 }
